# rust-punkt

./: .gitignore  .travis.yml  AUTHORS  Cargo.toml  LICENSE  README.md  README.tpl
example/: Cargo.toml  main.rs
examples/: custom-parameters.rs  printout.rs  typical-usage.rs
src/: iter.rs  lib.rs  ortho.rs  prelude.rs  token.rs  tokenizer.rs  trainer.rs  util.rs
src/token/: mod.rs  prelude.rs  sword.rs  training.rs  word.rs
src/tokenizer/: mod.rs  periodctxt.rs  sentence.rs  token.rs  training.rs  word.rs
src/trainer/: col.rs  data.rs  iter.rs  math.rs  mod.rs  trainer.rs
test/: history-of-china-expected.txt  history-of-china-raw.txt  npr-article-01-raw.txt  ny-times-article-01-raw.txt  pride-and-prejudice-raw.txt  spiegel-article-01-raw.txt  the-sayings-of-confucius-expected.txt  the-sayings-of-confucius-raw.txt
test/raw/: ny-times-article-02.txt  ny-times-article-03.txt  sigma-wiki.txt
test/sentence/: history-of-china.txt  npr-article-01.txt  ny-times-article-01.txt  pride-and-prejudice.txt  the-sayings-of-confucius.txt
test/word-periodctxt/: history-of-china.txt  npr-article-01.txt  ny-times-article-01.txt  pride-and-prejudice.txt  sigma-wiki.txt  the-sayings-of-confucius.txt
test/word-training/: npr-article-01.txt  ny-times-article-01.txt  pride-and-prejudice.txt  sigma-wiki.txt
