[package]
name = "punkt"
version = "0.1.2"
authors = ["Ferris Tseng <ferristseng@fastmail.fm>"]
keywords = ["punkt", "sentence", "token", "tokenizer"]
license = "MIT"
repository = "https://github.com/ferristseng/rust-punkt"
description = "An implementation of a Punkt sentence tokenizer"
readme = "README.md"

[lib]
name = "punkt"

[dependencies]
num = "0.1"
log = "0.3.1"
phf = "0.7"
phf_shared = "0.7"
phf_macros = "0.7"
rust-freqdist = "0.1"
rustc-serialize = "0.3.12"